# server/swagger.json
@@ -21,7 +21,7 @@
       "id": "header",
       "description": "Ingrese el token JWT en formato: Bearer <token>"
     }
-  }, 
+  },
   "schemes": ["http", "https"],
   "tags": [
     {
@@ -55,7 +55,48 @@
         "summary": "Retrieve all users",
         "produces": ["application/json"],
         "tags": ["users"],
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "firebaseUid",
+            "in": "query",
+            "description": "Firebase UID of the user",
+            "required": false,
+            "type": "string",
+            "example": "123AD45678DX90AAE"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number for pagination",
+            "required": false,
+            "type": "integer",
+            "default": 1
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Number of users per page",
+            "required": false,
+            "type": "integer",
+            "default": 10
+          },
+          {
+            "name": "role",
+            "in": "query",
+            "description": "Filter users by role",
+            "required": false,
+            "type": "string",
+            "default": "player"
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "description": "Sort users by field [asc|desc]",
+            "required": false,
+            "type": "string",
+            "default": "desc"
+          }
+        ],
         "responses": {
           "200": {
             "description": "API version create successfully",
@@ -581,6 +622,7 @@
     },
     "/question": {
       "get": {
+        "security": [{ "Bearer": [] }],
         "summary": "Get questions",
         "produces": ["application/json"],
         "tags": ["question"],
@@ -617,6 +659,7 @@
     },
     "/question/create": {
       "post": {
+        "security": [{ "Bearer": [] }],
         "summary": "Create questions",
         "produces": ["application/json"],
         "tags": ["question"],
@@ -675,6 +718,7 @@
     },
     "/question/{id}/update": {
       "put": {
+        "security": [{ "Bearer": [] }],
         "summary": "Update questions",
         "produces": ["application/json"],
         "tags": ["question"],
@@ -737,6 +781,7 @@
     },
     "/question/{id}/delete": {
       "delete": {
+        "security": [{ "Bearer": [] }],
         "summary": "Delete questions",
         "produces": ["application/json"],
         "tags": ["question"],
@@ -770,7 +815,54 @@
         "summary": "Get categorys",
         "produces": ["application/json"],
         "tags": ["category"],
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "description": "Name of the category",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "user",
+            "in": "query",
+            "description": "User ID who created the category",
+            "required": false,
+            "type": "string",
+            "example": "123AD45678DX90AAE"
+          },
+          {
+            "name": "description",
+            "in": "query",
+            "description": "Filter by category description",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number for pagination",
+            "required": false,
+            "type": "integer",
+            "default": 1
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Number of categorys per page",
+            "required": false,
+            "type": "integer",
+            "default": 10
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "description": "Sort categorys by field [asc|desc]",
+            "required": false,
+            "type": "string",
+            "default": "desc"
+          }
+        ],
         "responses": {
           "200": {
             "description": "API version retrieved successfully",
@@ -851,6 +943,7 @@
     },
     "/category/{id}/update": {
       "put": {
+        "security": [{ "Bearer": [] }],
         "summary": "Update category",
         "produces": ["application/json"],
         "tags": ["category"],
@@ -903,6 +996,7 @@
     },
     "/category/{id}/delete": {
       "delete": {
+        "security": [{ "Bearer": [] }],
         "summary": "Delete category",
         "produces": ["application/json"],
         "tags": ["category"],
@@ -931,7 +1025,7 @@
 
     "/auth/validSession": {
       "post": {
-        "summary": "Delete category",
+        "summary": "Authentication user",
         "produces": ["application/json"],
         "tags": ["auth"],
         "parameters": [
@@ -954,6 +1048,209 @@
                 "message": {
                   "type": "string",
                   "example": "Category deleted successfully"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/permission/create": {
+      "post": {
+        "security": [{ "Bearer": [] }],
+        "summary": "Create permission",
+        "produces": ["application/json"],
+        "tags": ["permission"],
+        "parameters": [
+          {
+            "name": "permission",
+            "in": "body",
+            "properties": {
+              "code": {
+                "type": "string",
+                "example": "write.category"
+              },
+              "description": {
+                "type": "string"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "API version retrieved successfully",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "string",
+                  "example": "write.category"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "isDeleted": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/permission": {
+      "get": {
+        "security": [{ "Bearer": [] }],
+        "summary": "Retrieve permissions",
+        "produces": ["application/json"],
+        "tags": ["permission"],
+        "parameters": [
+          {
+            "name": "code",
+            "in": "query",
+            "description": "Code of the permission",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "description",
+            "in": "query",
+            "description": "Filter by permission description",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number for pagination",
+            "required": false,
+            "type": "integer",
+            "default": 1
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Number of categorys per page",
+            "required": false,
+            "type": "integer",
+            "default": 10
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "description": "Sort categorys by field [asc|desc]",
+            "required": false,
+            "type": "string",
+            "default": "desc"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "API version retrieved successfully",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "code": {
+                    "type": "string",
+                    "example": "write.category"
+                  },
+                  "description": {
+                    "type": "Create categorys"
+                  },
+                  "isDeleted": {
+                    "type": "boolean",
+                    "example": false
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/permission/{id}/update": {
+      "put": {
+        "security": [{ "Bearer": [] }],
+        "summary": "Update permissions",
+        "produces": ["application/json"],
+        "tags": ["permission"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "permission",
+            "in": "body",
+            "properties": {
+              "code": {
+                "type": "string",
+                "example": "edit.category"
+              },
+              "description": {
+                "type": "string"
+              },
+              "isDeleted": {
+                "type": "boolean",
+                "example": false
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "API version retrieved successfully",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "code": {
+                    "type": "string",
+                    "example": "write.category"
+                  },
+                  "description": {
+                    "type": "Create categorys"
+                  },
+                  "isDeleted": {
+                    "type": "boolean",
+                    "example": false
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/permission/{id}/delete": {
+      "delete": {
+        "security": [{ "Bearer": [] }],
+        "summary": "Delete permission",
+        "produces": ["application/json"],
+        "tags": ["permission"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "API version retrieved successfully",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Permission deleted successfully"
                 }
               }
             }
